--- a/src/templates/views/index.hbs
+++ b/src/templates/views/index.hbs
@@ -15,12 +15,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    {{!-- share social media icons --}}
+    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5f11cf2e4bd7a00019aaeff6&product=sticky-share-buttons&cms=sop'
+        async='async'></script>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" href="image/fp-logo-big.png" type="image/x-icon">
-    {{!-- share social media icons --}}
-    <script type='text/javascript'
-        src='https://platform-api.sharethis.com/js/sharethis.js#property=5f11c64d4bd7a00019aaeff2&product=sticky-share-buttons'
-        async='async'></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
@@ -1036,7 +1035,7 @@
                 </div>
             </div>
             <!--Modal: modalYT-->
-            {{!-- <div class="sharethis-inline-share-buttons"></div> --}}
+
             <footer
                 class="page_footer ls ms s-pt-80 s-pb-70 s-py-lg-120 s-pt-xl-135 s-pb-xl-105 c-gutter-60 text-center text-md-left">
                 <div class="container">
