--- a/src/templates/views/index.hbs
+++ b/src/templates/views/index.hbs
@@ -16,8 +16,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     {{!-- share social media icons --}}
-    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5f11cf2e4bd7a00019aaeff6&product=sticky-share-buttons&cms=sop'
-        async='async'></script>
+        <script type='text/javascript'
+            src='https://platform-api.sharethis.com/js/sharethis.js#property=5f1584c66925780012922c31&product=sticky-share-buttons&cms=sop'
+            async='async'></script>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" href="image/fp-logo-big.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
