this is a second commit

--- a/src/templates/views/index.hbs
+++ b/src/templates/views/index.hbs
@@ -16,9 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     {{!-- share social media icons --}}
-        <script type='text/javascript'
-            src='https://platform-api.sharethis.com/js/sharethis.js#property=5f1584c66925780012922c31&product=sticky-share-buttons&cms=sop'
-            async='async'></script>
+        <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5f1584c66925780012922c31&product=sticky-share-buttons&cms=sop' async='async'></script>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" href="image/fp-logo-big.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
@@ -135,7 +133,7 @@
                 <header class="page_header ls justify-nav-end">
                     <div class="container-fluid">
                         <div class=" justify-content-center">
-                            <div class="col-xl-8 col-lg-8 col-md-7 col-1">
+                            <div class="col-xl-10 col-lg-10 col-md-10 col-1">
                                 <div class="nav-wrap">
 
                                     <!-- main nav start -->
@@ -152,21 +150,11 @@
                                             <!-- eof pages -->
 
                                             <li>
-                                                <a>Our Products</a>
-                                                <ul>
-                                                    <li>
-                                                        <a href="/space">Co-working Space</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="/yharah">Yharah</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="/academy">IO Academy</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="/beleful">Beleful</a>
-                                                    </li>
-                                                </ul>
+                                                <a href="/space">Co-workingSpace</a>
+                                            </li>
+
+                                            <li>
+                                                <a href="/academy">IO Academy</a>
                                             </li>
 
                                             <li>
@@ -785,7 +773,7 @@
                                 alt="">
                             <div class="divider-50"></div>
                             <h5 class="special-heading text-center mb-5">just 30 minute</h5>
-                            <a href="/beleful"><img src="image/beleful.png" width="250" class="" alt=""></a>
+                            <a href="https://beleful.com.ng" target="_blank"><img src="image/beleful.png" width="250" class="" alt=""></a>
                             {{!-- <h1 class="text-center">Beleful</h1> --}}
                             <p class="text-center big">Get your favourite meal delivered to your door step with just one
                                 click</p>
@@ -857,7 +845,7 @@
                                     <li><i class="fas fa-check text-danger mr-2"></i>Pick Ups & Drop offs</li>
                                     <li><i class="fas fa-check text-danger mr-2"></i>General Errands</li>
                                 </ul>
-                                <a class="btn btn-white mt-4" href="/yharah"><span>Know more</span></a>
+                                <a class="btn btn-white mt-4" href="https://yharah.com.ng" target="_blank"><span>Know more</span></a>
                                 <div class="d-flex justify-content-center mt-50 d-none">
 
                                 </div>
