--- a/src/templates/views/academy.hbs
+++ b/src/templates/views/academy.hbs
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!-->
 <html class="no-js">
 <!--<![endif]-->
+
 <head>
     <title>First Pavilion Technologies | Official</title>
     <meta charset="utf-8">
@@ -131,14 +132,14 @@
                 <header class="page_header ls justify-nav-end">
                     <div class="container-fluid">
                         <div class=" justify-content-center">
-                            <div class="col-xl-8 col-lg-8 col-md-7 col-1">
+                            <div class="col-xl-10 col-lg-10 col-md-10 col-1">
                                 <div class="nav-wrap">
 
                                     <!-- main nav start -->
                                     <nav class="top-nav">
                                         <ul class="nav sf-menu">
 
-                                            <li>
+                                            <li class="active">
                                                 <a href="/">Home</a>
                                             </li>
 
@@ -147,22 +148,12 @@
                                             </li>
                                             <!-- eof pages -->
 
-                                            <li class="active">
-                                                <a href="/products">Our Products</a>
-                                                <ul>
-                                                    <li>
-                                                        <a href="/space">Co-working Space</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="/yharah">Yharah</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="/academy">IO Academy</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="/beleful">Beleful</a>
-                                                    </li>
-                                                </ul>
+                                            <li>
+                                                <a href="/space">Co-workingSpace</a>
+                                            </li>
+
+                                            <li>
+                                                <a href="/academy">IO Academy</a>
                                             </li>
 
                                             <li>
@@ -225,7 +216,8 @@
         </div>
     </div>
 
-    <section class="s-pt-80 s-pb-20 s-pt-lg-120 s-pb-lg-70 s-pt-xl-160 s-pb-xl-100 c-gutter-60 c-mb-50 advantage-section cover-background">
+    <section
+        class="s-pt-80 s-pb-20 s-pt-lg-120 s-pb-lg-70 s-pt-xl-160 s-pb-xl-100 c-gutter-60 c-mb-50 advantage-section cover-background">
         <div class="container">
             <div class="col-lg-8 offset-lg-2">
                 <h5 class="special-heading text-center">Join Our</h5>
@@ -269,11 +261,11 @@
                         <div class="image-styled">
                             <img alt="" src="images/icon-2.png">
                         </div>
-                
+
                         <h5>
                             <a href="service-single.html">AutoCad</a>
                         </h5>
-                
+
                         <p>
                             Magna aliquyam erat, sed diam voluptua at vero eos et accusam
                         </p>
@@ -329,11 +321,11 @@
                         <div class="image-styled">
                             <img alt="" src="images/icon-6.png">
                         </div>
-                
+
                         <h5>
                             <a href="service-single.html">Game Development</a>
                         </h5>
-                
+
                         <p>
                             Redundant connectivity to Lanet and switch port
                         </p>
@@ -344,11 +336,11 @@
                         <div class="image-styled">
                             <img alt="" src="images/icon-6.png">
                         </div>
-                
+
                         <h5>
                             <a href="service-single.html">Augmented Reality / Virtual Reality</a>
                         </h5>
-                
+
                         <p>
                             Redundant connectivity to Lanet and switch port
                         </p>
@@ -374,183 +366,6 @@
             </div>
         </div>
     </section>
-
-    {{!-- <section
-        class="s-pt-60 s-pb-50 s-pt-lg-160 s-pb-lg-110 ls ms service-part c-gutter-0 c-mb-20 c-mb-lg-60 text-center text-lg-left"
-        id="services">
-        <div class="divider-5 d-block d-lg-none"></div>
-        <div class="container">
-            <div class="col-lg-8 offset-lg-2">
-                <h5 class="special-heading text-center">Join Our</h5>
-                <h1 class="text-center">IO Academy</h1>
-                <p class="text-center big">Join Our Training Sessions and Build your expertise, Best Student
-                Gets an Internship with First Pavilion.</p>
-            </div>
-            <div class="row align-items-center">
-                <div class="col-12 col-lg-4 text-center text-lg-right">
-                    <div class="service-title d-flex d-lg-block">
-                        <span class="small-width color1">01</span>
-                        <div>
-                            <h6 class="fs-12 text-uppercase fw-400">Block</h6>
-                            <h1> Chain</h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4">
-                    <div class="service-image text-center">
-                        <img src="images/service/01.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4">
-                    <p class="service-text fs-20">Lorem ipsum dolor sit amet, consetetur sadipscing elitred diam</p>
-                </div>
-            </div>
-            <div class="divider-20 d-block d-lg-none"></div>
-            <div class="row align-items-center service02">
-                <div class="col-12 col-lg-4 order-lg-3">
-                    <div class="service-title d-flex d-lg-block">
-                        <span class="small-width color2">02</span>
-                        <div>
-                            <h6 class="fs-12 text-uppercase fw-400">Cyber</h6>
-                            <h1>Security</h1>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-lg-4 order-lg-2">
-                    <div class="service-image text-center">
-                        <img src="images/service/02.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4 text-center text-lg-right order-lg-1">
-                    <p class="service-text fs-20">Edolore magna aliquyam eratsed diam voluptua at vero eos</p>
-                </div>
-            </div>
-            <div class="divider-20 d-block d-lg-none"></div>
-            <div class="row align-items-center service03">
-                <div class="col-12 col-lg-6">
-                    <div class="service-title d-flex d-lg-block text-center text-lg-right">
-                        <span class="small-width color3">03</span>
-                        <div>
-                            <h6 class="fs-12 text-uppercase fw-400">Web</h6>
-                            <h1>Development</h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-3">
-                    <div class="service-image text-center">
-                        <img src="images/service/03.jpg" alt="" class="">
-                    </div>
-                </div>
-                <div class="col-12 col-lg-3">
-                    <p class="service-text fs-20">Stet clitakasd gubergreno sea takimta sanctus est</p>
-                </div>
-            </div>
-            <div class="divider-20 d-block d-lg-none"></div>
-            <div class="row align-items-center service04">
-                <div class="col-12 col-lg-6 order-lg-3">
-                    <div class="service-title d-flex d-lg-block">
-                        <span class="small-width color4">04</span>
-                        <div>
-                            <h6 class="fs-12 text-uppercase fw-400">Game</h6>
-                            <h1>Development</h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-3 order-lg-2">
-                    <div class="service-image text-center">
-                        <img src="images/service/04.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-12 col-lg-3 text-center text-lg-right order-lg-1">
-                    <p class="service-text fs-20">Diam nonumy eirmod tempor invidunt ut labore dolore magna</p>
-                </div>
-            </div>
-            <div class="row align-items-center">
-                <div class="col-12 col-lg-6 text-center text-lg-right">
-                    <div class="service-title d-flex d-lg-block">
-                        <span class="small-width color1">05</span>
-                        <div>
-                            <h6 class="fs-12 text-uppercase fw-400">Artificial</h6>
-                            <h1>Intelligence</h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-3">
-                    <div class="service-image text-center">
-                        <img src="images/service/01.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-12 col-lg-3">
-                    <p class="service-text fs-20">Lorem ipsum dolor sit amet, consetetur sadipscing elitred diam</p>
-                </div>
-            </div>
-            <div class="divider-20 d-block d-lg-none"></div>
-            <div class="row align-items-center service02">
-                <div class="col-12 col-lg-4 order-lg-3">
-                    <div class="service-title d-flex d-lg-block">
-                        <span class="small-width color2">06</span>
-                        <div>
-                            <h6 class="fs-12 text-uppercase fw-400">Robotic And Embedded</h6>
-                            <h1>System</h1>
-                        </div>
-                    </div>
-                </div>
-            
-                <div class="col-12 col-lg-4 order-lg-2">
-                    <div class="service-image text-center">
-                        <img src="images/service/02.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4 text-center text-lg-right order-lg-1">
-                    <p class="service-text fs-20">Edolore magna aliquyam eratsed diam voluptua at vero eos</p>
-                </div>
-            </div>
-            <div class="divider-20 d-block d-lg-none"></div>
-            <div class="row align-items-center service03">
-                <div class="col-12 col-lg-6 ">
-                    <div class="service-title d-flex d-lg-block text-center text-lg-right">
-                        <span class="small-width color3">07</span>
-                        <div>
-                            <h6 class="fs-12 text-uppercase fw-400">Mobile Application</h6>
-                            <h1>Development</h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-3">
-                    <div class="service-image text-center">
-                        <img src="images/service/03.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-12 col-lg-3">
-                    <p class="service-text fs-20">Stet clitakasd gubergreno sea takimta sanctus est</p>
-                </div>
-            </div>
-            <div class="divider-20 d-block d-lg-none"></div>
-            <div class="row align-items-center service04">
-                <div class="col-12 col-lg-6 order-lg-3">
-                    <div class="service-title d-flex d-lg-block">
-                        <span class="small-width color4">08</span>
-                        <div>
-                            <h6 class="fs-12 text-uppercase fw-400">Augmented Reality & Virtual Reality</h6>
-                            <h1>AR & VR</h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-3 order-lg-2">
-                    <div class="service-image text-center">
-                        <img src="images/service/04.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-12 col-lg-3 text-center text-lg-right order-lg-1">
-                    <p class="service-text fs-20">Diam nonumy eirmod tempor invidunt ut labore dolore magna</p>
-                </div>
-            </div>
-        </div>
-        <div class="divider-10 d-block d-lg-none"></div>
-        <div class="divider-50 d-block"></div>
-    </section> --}}
-
 
     {{!-- footer --}}
     <footer
@@ -586,23 +401,23 @@
 
                 <div class="col-md-4 animate" data-animation="fadeInUp">
                     <div class="widget services-links">
-                        <h4 class="widget-title">Services</h4>
+                        <h4 class="widget-title">Quick Link</h4>
                         <ul>
+                            <li class="cat-item">
+                                <i class="fas fa-check text-info mr-3"></i>
+                                <a href="/about">About Us</a>
+                            </li>
                             <li class="cat-item">
                                 <i class="fas fa-check text-info mr-3"></i>
                                 <a href="/space">Co-working space</a>
                             </li>
                             <li class="cat-item">
                                 <i class="fas fa-check text-info mr-3"></i>
-                                <a href="/beleful">Beleful</a>
-                            </li>
-                            <li class="cat-item">
-                                <i class="fas fa-check text-info mr-3"></i>
-                                <a href="/yharah">yharah</a>
-                            </li>
-                            <li class="cat-item">
-                                <i class="fas fa-check text-info mr-3"></i>
                                 <a href="/academy">IO Academy</a>
+                            </li>
+                            <li class="cat-item">
+                                <i class="fas fa-check text-info mr-3"></i>
+                                <a href="/contact">Contact Us</a>
                             </li>
                         </ul>
                     </div>
@@ -611,7 +426,7 @@
                     <div class="widget widget_icons_list">
                         <h4 class="widget-title">Call Us</h4>
                         <p>
-                            <a href="tel:+2349020455349">{{pavInfo.phone}}</a>
+                            <a href="tel:+2349020455349">+2349020455349</a>
                         </p>
                         <a href="mailto:info@firstpavitech.com" class="small-text">
                             <i class="fas fa-envelope color-main fs-14"></i>
@@ -644,6 +459,7 @@
     </div><!-- eof #box_wrapper -->
     </div><!-- eof #canvas -->
 
+
     <!-- jQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
@@ -657,10 +473,12 @@
         src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
     {{!-- This is font awesome cdn --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/js/all.min.js"></script>
+    {{!-- year counter --}}
     <script src="js/footerFullYr.js"></script>
     {{!-- custom CSS --}}
     <script src="js/compressed.js"></script>
     <script src="js/main.js"></script>
+
 
 </body>
 
