--- a/src/templates/views/index.hbs
+++ b/src/templates/views/index.hbs
@@ -16,7 +16,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     {{!-- share social media icons --}}
-        <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5f1584c66925780012922c31&product=sticky-share-buttons&cms=sop' async='async'></script>
+    <script type='text/javascript'
+        src='https://platform-api.sharethis.com/js/sharethis.js#property=5f1584c66925780012922c31&product=sticky-share-buttons&cms=sop'
+        async='async'></script>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" href="image/fp-logo-big.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
@@ -194,7 +196,7 @@
                 <div class="flexslider" data-nav="false">
                     <ul class="slides">
                         <li class="ds">
-                            <img src="images/slide01.jpg" alt="">
+                            <img src="image/slide.jpg" alt="">
                             <div class="container">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -218,7 +220,7 @@
                             </div><!-- eof .container -->
                         </li>
                         <li class="ds slide2">
-                            <img src="images/slide02.jpg" alt="">
+                            <img src="image/slide.jpg" alt="">
                             <div class="container">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -256,7 +258,7 @@
                             </div>
                         </li>
                         <li class="ds slide3">
-                            <img src="images/slide03.jpg" alt="">
+                            <img src="image/slide.jpg" alt="">
                             <div class="container">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -773,7 +775,8 @@
                                 alt="">
                             <div class="divider-50"></div>
                             <h5 class="special-heading text-center mb-5">just 30 minute</h5>
-                            <a href="https://beleful.com.ng" target="_blank"><img src="image/beleful.png" width="250" class="" alt=""></a>
+                            <a href="https://beleful.com.ng" target="_blank"><img src="image/beleful.png" width="250"
+                                    class="" alt=""></a>
                             {{!-- <h1 class="text-center">Beleful</h1> --}}
                             <p class="text-center big">Get your favourite meal delivered to your door step with just one
                                 click</p>
@@ -845,7 +848,8 @@
                                     <li><i class="fas fa-check text-danger mr-2"></i>Pick Ups & Drop offs</li>
                                     <li><i class="fas fa-check text-danger mr-2"></i>General Errands</li>
                                 </ul>
-                                <a class="btn btn-white mt-4" href="https://yharah.com.ng" target="_blank"><span>Know more</span></a>
+                                <a class="btn btn-white mt-4" href="https://yharah.com.ng" target="_blank"><span>Know
+                                        more</span></a>
                                 <div class="d-flex justify-content-center mt-50 d-none">
 
                                 </div>
@@ -1058,23 +1062,23 @@
 
                         <div class="col-md-4 animate" data-animation="fadeInUp">
                             <div class="widget services-links">
-                                <h4 class="widget-title">Services</h4>
+                                <h4 class="widget-title">Quick Link</h4>
                                 <ul>
+                                    <li class="cat-item">
+                                        <i class="fas fa-check text-info mr-3"></i>
+                                        <a href="/about">About Us</a>
+                                    </li>
                                     <li class="cat-item">
                                         <i class="fas fa-check text-info mr-3"></i>
                                         <a href="/space">Co-working space</a>
                                     </li>
                                     <li class="cat-item">
                                         <i class="fas fa-check text-info mr-3"></i>
-                                        <a href="/beleful">Beleful</a>
-                                    </li>
-                                    <li class="cat-item">
-                                        <i class="fas fa-check text-info mr-3"></i>
-                                        <a href="/yharah">yharah</a>
-                                    </li>
-                                    <li class="cat-item">
-                                        <i class="fas fa-check text-info mr-3"></i>
                                         <a href="/academy">IO Academy</a>
+                                    </li>
+                                    <li class="cat-item">
+                                        <i class="fas fa-check text-info mr-3"></i>
+                                        <a href="/contact">Contact Us</a>
                                     </li>
                                 </ul>
                             </div>
@@ -1083,7 +1087,7 @@
                             <div class="widget widget_icons_list">
                                 <h4 class="widget-title">Call Us</h4>
                                 <p>
-                                    <a href="tel:+2349020455349">{{pavInfo.phone}}</a>
+                                    <a href="tel:+2349020455349">+2349020455349</a>
                                 </p>
                                 <a href="mailto:info@firstpavitech.com" class="small-text">
                                     <i class="fas fa-envelope color-main fs-14"></i>
@@ -1102,7 +1106,7 @@
                     </div>
                 </div>
             </footer>
-            <section class="page_copyright ds s-py-10 copyright-bg">
+            <section class="page_copyright ds s-py-10 background-gradient2">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="divider-15 d-none d-lg-block"></div>
